fixed bug in fileEditor class